--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
-spring.messages.basename=text
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:h2:file:~/bank.db
+spring.messages.basename=text
+
+# H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
+# Datasource
+spring.datasource.url=jdbc:h2:file:~/bank
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
